<resources>
    <string name="app_name">Safecrop Insight</string>
    <string name="version">Version: 2025.05.25</string>
    <string name="search_by_farmer_code">Search by farmer code</string>
    <string name="no_farmer_available">No farmer available</string>
    <string name="no_training_available">No training available</string>
    <string name="load_farmer_list">Load Farmer List</string>
    <string name="farmer_list">Farmer List</string>
    <string name="load_train_topic">Load Training Topic</string>
    <string name="train_list">Training List</string>
    <string name="iis_photo">Photo of farm</string>
    <string name="loaded_farmers">0</string>
    <string name="select_choice">Select answer</string>
    <string name="select_farm_units">Select farm units</string>
    <string name="select_farm_visited">Select farm visited</string>
    <string name="select_com">Select community</string>
    <string name="select_district">Select district</string>
    <string name="select_gender">Select gender</string>
    <string name="_01_01_2024">01/01/2024</string>
    <string name="select_date">SELECT DATE</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_m_number">Enter mobile number</string>
    <string name="enter_agent_name">Enter your full name</string>
    <string name="enter_farmer_name">Enter farmer name</string>
    <string name="get_location">Get Location</string>
    <string name="get_photo">Get Photo</string>
    <string name="get_idcard_photo">Photo of ID Card</string>
    <string name="get_farmer_photo">Photo of Farmer</string>
    <string name="get_tp_photo">Photo of Sign/Thumbprint</string>
    <string name="dash_for_geo_location">-.------- -.-------</string>
    <string name="enter_national_id"> Enter National ID</string>
    <string name="enter_farmerid"> Enter farm ID</string>
    <string name="enter_wages"> Enter wages</string>
    <string name="iis_pj"> Provide justification</string>
    <string name="iis_q1">(1) Name of internal inspector</string>
    <string name="iis_q2">(2) Farmer name</string>
    <string name="iis_q3">(3) Gender</string>
    <string name="iis_q4">(4) National ID number</string>
    <string name="iis_q5">(5) Year of Birth</string>
    <string name="iis_q6">(6) Internal Group Member /Farm ID</string>
    <string name="iis_q7">(7) Farmer mobile number</string>
    <string name="iis_q8">(8) District</string>
    <string name="iis_q9">(9) Community</string>
    <string name="iis_q10">(10) Number of farm units</string>
    <string name="iis_q11">(11) The farm you visited (e.g. Farm 1, Farm 2, Farm 3)</string>
    <string name="iis_q12">(12) Total Farm area (ha)</string>
    <string name="iis_q13">(13) Total certified crop area (ha)</string>
    <string name="iis_q14">(14) Previous Year’s Harvest (Kg)</string>
    <string name="iis_q15">(15) Current Year Yield Estimate (Kg)</string>
    <string name="iis_q16">(16) Date of internal inspection</string>
    <string name="iis_q17">(17) Number of permanent workers</string>
    <string name="iis_q18">(17.1) Name of permanent worker1</string>
    <string name="iis_q19">(17.1) Gender of permanent worker1</string>
    <string name="iis_q20">(17.1) Year of birth of permanent worker1</string>
    <string name="iis_q21">(17.1) Wages of permanent worker1</string>
    <string name="iis_q22">(17.2) Name of permanent worker2</string>
    <string name="iis_q23">(17.2) Gender of permanent worker2</string>
    <string name="iis_q24">(17.2) Year of birth of permanent worker2</string>
    <string name="iis_q25">(17.2) Wages of permanent worker2</string>
    <string name="iis_q26">(17.3) Name of permanent worker3</string>
    <string name="iis_q27">(17.3) Gender of permanent worker3</string>
    <string name="iis_q28">(17.3) Year of birth of permanent worker3</string>
    <string name="iis_q29">(17.3) Wages of permanent worker3</string>
    <string name="iis_q30">(17.4) Name of permanent worker4</string>
    <string name="iis_q31">(17.4) Gender of permanent worker4</string>
    <string name="iis_q32">(17.4) Year of birth of permanent worker4</string>
    <string name="iis_q33">(17.4) Wages of permanent worker4</string>
    <string name="iis_q34">(17.5) Name of permanent worker5</string>
    <string name="iis_q35">(17.5) Gender of permanent worker5</string>
    <string name="iis_q36">(17.5) Year of birth of permanent worker5</string>
    <string name="iis_q37">(17.5) Wages of permanent worker5</string>
    <string name="iis_q38">(18) Number of temporary workers</string>
    <string name="iis_q39">(19) First year of RA certification</string>
    <string name="iis_q40">(20) Household size</string>
    <string name="iis_q41">(21) Year of Certification</string>
    <string name="iis_q42">(1.2.1) Management complies with applicable laws and collective bargaining agreements (CBA) within the scope of the Rainforest Alliance Sustainable Agriculture Standard. Producer is aware of the applicable laws that governs certification.</string>
    <string name="iis_q43">(1.2.6) An up-to-date list of permanent and temporary workers is kept, containing for each worker: (ie: Full name, Gender, Year of birth, Wages)</string>
    <string name="iis_q44">(1.2.8) Does the farmer understand the content of this agreement? Does farmer have a copy of the signed contract?</string>
    <string name="iis_q45">(FED1) Have you received training this year?</string>
    <string name="iis_q46">(1.2.9) Records for certification purposes and compliance are kept for at least four years.</string>
    <string name="iis_q47">(1.2.11) A sketch of the farm is available, including: the production area of certified crop, forests, water bodies and buildings.</string>
    <string name="iis_q48">(1.5.1) Inspector checks if the farmer is aware of the grievance mechanism that the group has in place</string>
    <string name="iis_q49">(2.1.8) Group members keep sales receipts, including name of group member, group member ID, date, product type and volume.</string>
    <string name="iis_q50">(3.2.1) Has the farmer received the RA sustainability differential for the cocoa delivered last year?</string>
    <string name="iis_q51">(4.1.1) Plant varieties for planting, grafting and renovation are selected based on quality, productivity, resistance to pests and diseases and on suitability for the climate during the lifetime of the plants. Planting materials are free of pests and diseases.</string>
    <string name="iis_q52">(4.1.2) New plantings have a well-established cropping system which takes into account (e.g. Requirements of the variety used, Geographical, ecological and agronomic conditions, Diversification and intercropping crops with different rooting depths and soil uses to enhance soil quality and health, Planting density)</string>
    <string name="iis_q53">(4.2.2) Producers carry out pruning according to the requirement in 4.2.1 Indicator: (ie: % of group members that adequately prune according to crop needs, agro ecological conditions and applicable pruning guidelines)</string>
    <string name="iis_q54">(4.2.2/2) Group member pruning adequately</string>
    <string name="iis_q55">(4.2.3) Producers renovate the certified crop when needed according to age, disease or other causes, to maintain productivity. This includes replanting production area, gap filling and grafting.</string>
    <string name="iis_q56">(4.3.1) The certified crop is not genetically modified (GMO).</string>
    <string name="iis_q57">(4.3.2) There are no genetically modified (GMO) crops on the farm.</string>
    <string name="iis_q58">(4.4.4) Producers use organic fertilizers and by-products available at farm level first, and supplement by inorganic fertilizer if nutrients are still lacking. To minimize risk, animal manure is hot composted before use as a fertilizer. Producers store animal manure and compost at least 25 meters away from any water body.</string>
    <string name="iis_q59">(4.4.7) Producers monitor and optimize the use of organic and inorganic fertilizers.</string>
    <string name="iis_q60">(4.5.2) Producers regularly monitor pests and their principal natural enemies.</string>
    <string name="iis_q61">(4.5.3) When threshold levels of pests are reached, producers firstly try biological, physical, and other non-chemical control methods, and document this. When such methods are proven not to be effective, producers can do agrochemical applications, as advised by a competent technician and/or upon the advice or instruction by an official national organization.</string>
    <string name="iis_q62">(4.5.4) Producers and workers that are involved in pest management activities are trained about the IPM strategy.</string>
    <string name="iis_q63">(4.5.7) Producers monitor and reduce the use of pesticides. (Name of pesticide, Quantity used, Target pest)</string>
    <string name="iis_q64">(4.6.1) No agrochemicals are used that are: (• On the Rainforest Alliance Prohibited List, • Prohibited by applicable law, • Not legally registered in the country where the farm is located, Producers use only agrochemicals sold by authorized vendors, in original and sealed packaging.</string>
    <string name="iis_q65">(4.6.2) If producers use pesticides included on the Risk Mitigation list, all respective risk mitigation practices, as described in Annex 7, Pesticides Management, are implemented.</string>
    <string name="iis_q66">(4.6.3) Persons handling pesticides are skilled in the preparation and application of pesticides, and receive annual training. Persons handling pesticides use the Personal Protective Equipment (PPE) as prescribed in the product’s label or Material Safety Data Sheet (MSDS). If there is no information, basic protective clothing with additional items is worn according to the potential risk and as recommended by a competent technician.</string>
    <string name="iis_q67">(4.6.4) Persons handling pesticides bath, change and wash clothes after application.</string>
    <string name="iis_q68">(4.6.5) Pesticides are prepared and applied according to the label, MSDS or security tag, or as recommended by an official national organization or a competent technician, especially with regards to: • Safe transport to area of application • Respecting the correct dosage • Using appropriate equipment and techniques • appropriate weather conditions • Respecting restricted entry intervals (REI), including warning signs in local language.</string>
    <string name="aa_aa_aa001">AA-AA-AA001</string>
    <string name="farmer_fname">fName</string>
    <string name="farmer_lname">lName</string>
    <string name="farmer_district">District</string>
    <string name="dash">-</string>
    <string name="child_survey">Child Survey</string>
    <string name="district">District</string>
    <string name="exiting_application">EXITING APPLICATION</string>
    <string name="are_you_sure_you_want_to_exit">You are exiting the app\nAre you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="community">Community</string>
    <string name="date_time">DateTime</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="filter">Filter</string>
    <string name="total_records_synced_0">Total Records Synced: 0</string>
    <string name="filter_by">Filter By:</string>
    <string name="done">Done</string>
    <string name="openstreetmap_contributors_data_available_under_the_open_database_license_odbl">© OpenStreetMap contributors. Data available under the Open Database License (ODbL).</string>
    <string name="_0_000_0_000">0.000, 0.000</string>
</resources>