<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="7dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="3dp"
    app:cardPreventCornerOverlap="true"
    app:contentPadding="12dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_person_black"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/brown"/>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="17sp"
                android:id="@+id/farmerid"
                android:text="@string/aa_aa_aa001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="3dp"
                android:textSize="13sp"
                android:id="@+id/farmerfname"
                android:text="@string/farmer_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/farmerlname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/farmer_fname"
                    android:layout_marginTop="3dp"/>

                <TextView
                    android:id="@+id/dash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/dash"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="5dp"/>

                <TextView
                    android:id="@+id/district"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="5dp"
                    android:textSize="13sp"
                    android:text="@string/farmer_lname" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>