<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".farmerlist.FarmersDayListActivity">

    <EditText
        android:id="@+id/searchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_by_farmer_code"
        android:maxLength="15"
        android:inputType="text" />

    <TextView
        android:id="@+id/emptyState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/no_farmer_available"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/totalFarmersLoaded"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/loaded_farmers"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

</LinearLayout>