<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#5d5d5d">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_rounded_top_corners">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center"
            android:background="@drawable/brown_rounded_top_corners">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/exiting_application"
                android:layout_marginStart="5sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/closeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/close_white"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/are_you_sure_you_want_to_exit"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/brown"
                android:textColor="@color/white"
                android:text="@string/exit"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/brown"
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>