<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sustain.inspection.InspectionFarmerListActivity">

    <TextView
        android:id="@+id/emptyState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/no_farmer_available"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/brown"
            android:padding="8dp"
            android:gravity="center">

            <TextView
                android:id="@+id/farmerListTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/farmer_list"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/totalFarmersLoaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loaded_farmers"
                android:textColor="@color/white"/>

        </LinearLayout>

</LinearLayout>